Fix whitespace on about page

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -162,6 +162,7 @@
         font-size: 1.5em;
         line-height: 1.125;
         max-width: 17.5em;
+        grid-row: span 2;
       }
       .standard-layout > p,
       .standard-layout > p.action,
